welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:8: error: ':' expected but ')' found.
def ado(a):Boulean={
         ^teenSum:11: error: identifier expected but '}' found.
 }
 ^